# pawse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pawse/: __init__.py  cli.py  core.py
src/pymorse/: core.py
tests/: test_cli.py  test_pawse.py
wiki/: CLI.md  Codec.md
