[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyMorse"
version = "0.1.2"
description = "Bidirectional Morse-code encoder/decoder in Python"
authors = [{ name = "0xFFFFFF" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["numpy >=2.0.0", "scipy >=1.10"]

[project.optional-dependencies]
audio = ["sounddevice>=0.4"]
