[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawse"
version = "0.1.5"
description = "Bidirectional Morse-code encoder/decoder in Python"
authors = [{ name = "Fluffy" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["numpy >=2.0.0", "scipy >=1.10"]

[project.scripts]
pawse = "pawse.cli:main"

[project.optional-dependencies]
audio = ["sounddevice>=0.4"]
